# perscache

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.ipynb  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
docs/: api_reference.md
perscache/: __init__.py  _logger.py  cache.py  compatibility.py  logger.py  serializers.py  storage.py
persistentcache/: __init__.py  cache.py  serializers.py  storage.py
tests/: conftest.py  test-requirements.txt  test_change.py  test_logging.py  test_main.py  test_nocache.py  test_serializers.py  test_shared_cache.py  test_storage.py  test_ttl.py
