[metadata]
name = perscache
version = 0.6.1
author = leshchenko1979
author_email = leshchenko1979@gmail.com
summary = An easy to use decorator for persistent memoization: like `functools.lrucache`, but results can be saved in any format to any storage.
license = MIT License
description_file = README.md
long_description_content_type = text/markdown
home_page = https://github.com/leshchenko1979/perscache
requires_python = >=3.6
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[bdist_wheel]
universal = 1
